test/ui/test/cannot-apply.lushui
Abomination: Type = 0 1
